--- a/golem-embed/embed-openai/Cargo.toml
+++ b/golem-embed/embed-openai/Cargo.toml
@@ -18,28 +18,29 @@ durability = ["golem-rust/durability", "golem-embed/durability"]
 
 
 [dependencies]
-golem-embed= {path="../embed", version="0.0.0", default-features= false}
+golem-embed = { path = "../embed", version = "0.0.0", default-features = false }
 golem-rust = { workspace = true }
 log = { workspace = true }
 reqwest = { workspace = true }
-serde = {workspace = true}
+serde = { workspace = true }
 serde_json = { workspace = true }
+base64 = { workspace = true }
 wit-bindgen-rt = { workspace = true }
 bytemuck = "1.23.0"
 
 
 [package.metadata.component]
-package="golem:embed-openai"
+package = "golem:embed-openai"
 
 [package.metadata.component.bindings]
-generate_unused_types=true
+generate_unused_types = true
 
 [package.metadata.component.bindings.with]
-"golem:embed/embed@1.0.0"= "golem_embed::golem::embed::embed"
+"golem:embed/embed@1.0.0" = "golem_embed::golem::embed::embed"
 
 [package.metadata.component.target]
 path = "wit"
 
 [package.metadata.component.target.dependencies]
 "golem:embed" = { path = "wit/deps/golem-embed" }
-"wasi:io" = { path = "wit/deps/wasi:io"}
+"wasi:io" = { path = "wit/deps/wasi:io" }
