--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,17 @@
 [workspace]
 resolver = "2"
 
-members = [ 
-    "golem-embed/embed", "golem-embed/embed-cohere",  
-    "golem-embed/embed-openai", 
-    "golem-llm/llm", 
+members = [
+    "golem-embed/embed",
+    "golem-embed/embed-cohere",
+    "golem-embed/embed-hugging-face",
+    "golem-embed/embed-openai",
+    "golem-llm/llm",
     "golem-llm/llm-anthropic",
-    "golem-llm/llm-grok", 
+    "golem-llm/llm-grok",
     "golem-llm/llm-ollama",
-    "golem-llm/llm-openai", 
-    "golem-llm/llm-openrouter"  
+    "golem-llm/llm-openai",
+    "golem-llm/llm-openrouter",
 ]
 
 [profile.release]
