--- a/golem-embed/test/components-rust/test-embed/Cargo.toml
+++ b/golem-embed/test/components-rust/test-embed/Cargo.toml
@@ -11,6 +11,9 @@ required-features = []
 [features]
 default = ["openai"]
 openai = []
+cohere = []
+hugging-face = []
+voyageai = []
 
 [dependencies]
 # To use common shared libs, use the following:
@@ -33,8 +36,8 @@ path = "wit-generated"
 
 [package.metadata.component.target.dependencies]
 "golem:embed" = { path = "wit-generated/deps/golem-embed" }
-"wasi:clocks" = { path = "wit-generated/deps/clocks" }
 "wasi:io" = { path = "wit-generated/deps/io" }
+"wasi:clocks" = { path = "wit-generated/deps/clocks" }
 "golem:rpc" = { path = "wit-generated/deps/golem-rpc" }
 "test:helper-client" = { path = "wit-generated/deps/test_helper-client" }
 "test:embed-exports" = { path = "wit-generated/deps/test_embed-exports" }
