fix: issue with crate-name
Signed-off-by: Abinand P <abinand0911@gmail.com>

--- a/vector/vector/Cargo.toml
+++ b/vector/vector/Cargo.toml
@@ -11,7 +11,7 @@ with special support for Golem Cloud"
 
 [lib]
 path = "src/lib.rs"
-crate-type = ["rlib]
+crate-type = ["rlib"]
 
 [dependencies]
 golem-rust = { workspace = true }
