--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -137,8 +137,9 @@ jobs:
       - name: Build and test Ollama integration
         run: |
           set -e
-          cargo make --makefile golem-llm/Makefile.toml build-llm-ollama
-          cd golem-llm/test
+          cd golem-llm
+          cargo make build-ollama 
+          cd test
           golem-cli app build -b ollama-debug
           golem-cli app deploy -b ollama-debug
           golem-cli worker new -e GOLEM_OLLAMA_BASE_URL=http://localhost:11434 test:llm/ollama-1
