--- a/llm/providers/grok/Cargo.toml
+++ b/llm/providers/grok/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "golem-llm-openai"
+name = "golem-llm-grok"
 version = "0.0.0"
 edition = "2021"
 license = "Apache-2.0"
 homepage = "https://golem.cloud"
 repository = "https://github.com/golemcloud/golem-llm"
-description = "WebAssembly component for working with OpenAI APIs, with special support for Golem Cloud"
+description = "WebAssembly component for working with Grok APIs, with special support for Golem Cloud"
 
 [lib]
 path = "src/lib.rs"
@@ -16,7 +16,7 @@ default = ["durability"]
 durability = ["golem-rust/durability", "golem-llm/durability"]
 
 [dependencies]
-golem-llm = { path = "../llm", version = "0.0.0", default-features = false }
+golem-llm = { path = "../../llm", version = "0.0.0", default-features = false }
 
 golem-rust = { workspace = true }
 log = { workspace = true }
@@ -27,7 +27,7 @@ wit-bindgen-rt = { workspace = true }
 base64 = { workspace = true }
 
 [package.metadata.component]
-package = "golem:llm-openai"
+package = "golem:llm-grok"
 
 [package.metadata.component.bindings]
 generate_unused_types = true
